--- a/gradle/wrapper/gradle-wrapper.properties
+++ b/gradle/wrapper/gradle-wrapper.properties
@@ -2,7 +2,7 @@
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
 #distributionUrl=https\://services.gradle.org/distributions/gradle-8.1-bin.zip
-# distributionUrl=file:///Users/lr/gradleLocal/gradle-8.1-bin.zip
-distributionUrl=file:///C:/Gradle/gradle-8.1-bin.zip
+ distributionUrl=file:///Users/lr/gradleLocal/gradle-8.1-bin.zip
+#distributionUrl=file:///C:/Gradle/gradle-8.1-bin.zip
 zipStoreBase=GRADLE_USER_HOME
 zipStorePath=wrapper/dists
