--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Thu Nov 13 15:50:55 CST 2025
-sdk.dir=F\:\\AndroidSDK
+#Fri Dec 05 20:00:22 CST 2025
+sdk.dir=/Users/lr/Library/Android/sdk
